2009-08-06  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Darin Adler.

        cssgrammar.cpp fails to compile with RVCT compiler
        https://bugs.webkit.org/show_bug.cgi?id=27952

        * css/CSSGrammar.y: Do not convert to String to get rid of the stray
        memory allocation

        * platform/text/StringImpl.cpp:
        (WebCore::equalIgnoringCase):
        * platform/text/StringImpl.h:
        (WebCore::equalIgnoringCase): Add charactersEqualIgnoringCase
          function that works with a character pointer and length

Canonical link: https://commits.webkit.org/38449@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46846 268f45cc-cd09-0410-ab3c-d52691b4dbfc