WebCore/platform/text/StringImpl.cpp
@@ -539,7 +539,7 @@ static bool equal(const UChar* a, const char* b, int length)
     return true;
 }
 
-static bool equalIgnoringCase(const UChar* a, const char* b, int length)
+bool equalIgnoringCase(const UChar* a, const char* b, unsigned length)
 {
     ASSERT(length >= 0);
     while (length--) {
